# HenriksParsingProject

./: Cargo.toml  readme.md
examples/: rust_defined_rules.rs  simple_stack_based_math.rs  simple_stack_based_math.txt  stack_based_math.rs  stack_based_math.txt
src/: errors.rs  first_sets.rs  follow_sets.rs  lib.rs  main.rs  named_graph.rs  parse_funcs.rs  parser_data.rs  peekables.rs  rule_parsing.rs  script_parser.rs  sets.rs  simple_graph.rs  steuer_map.rs  steuer_sets.rs  test_helpers.rs  tree.rs  virtual_machine.rs  vms.rs
src/vms/: counting_vm.rs  simple_stack_vm.rs  stack_vm.rs
