[package]
name = "henriks-parsing-project"
version = "0.1.0"
edition = "2024"
description = "A library for building LL(1) parsers from a BNF-like syntax with virtual machine integration"
authors = ["Henrik Diekmann"]
license = "MIT"
repository = "https://github.com/henrikdiekmann/henriks-parsing-project"
keywords = ["parser", "bnf", "grammar", "language", "compiler"]
categories = ["parsing", "compilers"]
readme = "readme.md"

[lib]
name = "henriks_parsing_project"
path = "src/lib.rs"

[dependencies]
